# Learning24

09/01/: constructors.cpp
10/: initialisation_list.cpp
10/01/: initialisation_list.cpp  pointers.cpp
11/: smart_pointers.cpp
11/01/: smart_pointers.cpp
16/: purevirtual.cpp
17/: new_dlt.cpp  stack1.h
19/: static.cpp
22/: sir.cpp  template.c++  template_check.cpp
23/: rev_str_int.cpp  strcpy.cpp
25/: palindrome.cpp
29/: 2darray_heap.cpp  pushobj_inset.cpp  queue_usingstack.h
31/: assign3.cpp
February/01Feb/: Assignment.cpp  AssignmentDb.cpp
February/02Feb/: Assignment.cpp  AssignrmentCh.h  ClassDec.h  Functions.h  temp.cpp
February/05Feb/: remove_duplicate_IV.cpp  remove_duplicate_V.cpp  remove_duplicates.cpp  remove_duplicates_II.cpp  remove_duplicates_III.cpp  remove_element.cpp  remove_element_II.cpp
February/05Feb/practice/: copy_constructor.cpp  dynamic_cast.cpp  functor.cpp  mutable.cpp  new_dlt.cpp  operator_overloading.cpp  pure_virtual.cpp  static_func.cpp  withoutmap.cpp
February/11Feb/: divers.cpp
February/11Feb/.cph/: .divers.cpp_371d6104cd79efc78bc9c826e81c29b1.prob
January/09/: constructors.cpp
January/17/: new_dlt.cpp  stack.h  stackuse.c++  tempCodeRunnerFile.c++
January/19/: dynamic.cpp
January/23/: static_func.cpp
January/24/: singly_linked_list.cpp
January/29/: functor.cpp
January/30/: map.cpp  set.cpp
January/31/: assign_2.cpp  assignment.cpp
QT/2_Dialogs/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT/Basic_login/: login.h  mainwindow.cpp  mainwindow.ui  signup.cpp  signup.h
QT/CarDashBoard/: CMakeLists.txt  dashboardclass.cpp  dashboardclass.h  dashboardclass.ui  main.cpp
QT/CarDashBoard/DataBase/: CMakeLists.txt  databaseClass.h  databaseconnection.cpp  dataprovider.cpp  dataprovider.h
QT/CarDashBoard/Service/: serviceclass.cpp  serviceconnection.cpp  serviceprovider.cpp  serviceprovider.cpp.UBGyRe  serviceprovider.h
QT/CurrencyConverter/: mainwindow.cpp
QT/Login_signup/: CMakeLists.txt  login.cpp  mainwindow.cpp  signup.cpp  signup.ui
QT/My proj/Basic_login/: CMakeLists.txt  login.cpp  login.ui  mainwindow.h  signup.ui
QT/My proj/CurrencyConverter/: CMakeLists.txt  CMakeLists.txt.user.6dc7c10  mainwindow.h  mainwindow.ui
QT/My proj/Login_signup/: login.h  login.ui  mainwindow.h  mainwindow.ui  signup.h
QT/My proj/calc/: CMakeLists.txt.user.6dc7c10  mainwindow.ui
QT/Practice/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/Vehicle_Dashboard/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QT/Vehicle_Dashboard/Database/: database.cpp  database.h
QT/Vehicle_Dashboard/Service/: service.cpp  service.h
QT/Vehicle_Dashboard_old/32456/CarDashBoard/Service/: CMakeLists.txt  serviceclass.h  serviceconnection.h  serviceprovider.cpp  serviceprovider.h
QT/build-Basic_login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT/build-CurrencyConverter-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT/build-Login_signup-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT/build-Practice-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT/build-Vehicle_Dashboard-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT/build-calc-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT/build-calculator-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT/build-updated_currency_calculator-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT/calc/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QT/dvc_trac/: CMakeLists.txt  generatepdf.cpp  generatepdf.h  generatepdf.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatedetails.cpp  updatedetails.h  updatedetails.ui
QT/dvc_trac/Database/: CMakeLists.txt  database.cpp  database.h
QT/dvc_trac/Service/: CMakeLists.txt  service.cpp  service.h
QT/test/: CMakeLists.txt  main.cpp  sumtest.cpp
QT/test/SumService/: CMakeLists.txt  sum.cpp  sum.h
QT/updated_currency_calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/updated_device_tracker/: CMakeLists.txt  generatepdf.cpp  generatepdf.h  generatepdf.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatedetails.h  updatedetails.ui
practice/: Movies (E) - Shortcut.lnk  copy_const.cpp  custom_ops.cpp  deep_copy1.cpp  map_without_map.cpp  operator_overload.cpp  pre_post.cpp  static_dyanamic.cpp  virtual_fun.cpp
practice_new/: deep_copy.cpp  deepcopy(char).cpp  operator_overload.cpp  pre_post.cpp  singly_link_list.cpp  stack_implementation.cpp  static_dynamic.cpp
(+190 files in other folders)
